hphp/test/slow/memoize/unsupported.php.expectf

Fatal error: <<__Memoize>> is in development. It currently only support args with the following typehints: int, ?int, bool, ?bool, string in %s/test/slow/memoize/unsupported.php on line 4
